[F] Resize blank covers correctly in both lists
[FEATURE #115435963]

--- a/client/src/theme/Components/_grid-project-covers.scss
+++ b/client/src/theme/Components/_grid-project-covers.scss
@@ -22,7 +22,7 @@
     vertical-align: top;
 
     // NB: Requires font-size reset if it contains typography
-    img {
+    img, svg {
       width: 100%;
       height: auto;
     }
