--- a/client/src/theme/Components/_grid-project.scss
+++ b/client/src/theme/Components/_grid-project.scss
@@ -21,7 +21,7 @@
     text-decoration: none;
 
     .figure-wrapper {
-      max-width: 135px;
+      max-width: 180px;
     }
 
     // Figure
@@ -29,15 +29,15 @@
       position: relative;
       height: 0;
       max-width: 100%;
-      padding-top: 144%;
+      padding-top: 108%;
       margin-bottom: 20px;
 
       img, svg {
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: auto;
+        width: auto;
+        height: 100%;
         max-height: 100%;
         border: 4px solid transparent;
 
@@ -63,15 +63,6 @@
         text-align: center;
         background-color: $accentPrimary;
         border-radius: 100%;
-      }
-    }
-
-    // Placeholder variety
-    .placeholder {
-      max-width: 180px;
-
-      figure {
-        padding-top: 108%;
       }
     }
 
